--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,43 +1,25 @@
-user www-data;
-worker_processes auto;
-
-pid /run/nginx.pid;
-
-include /etc/nginx/modules-enabled/*.conf;
-
-events 
+server 
 {
-    worker_connections 768;
-}
+    listen 443 ssl;
+    server_name spagliar.42.fr;
 
-http 
-{
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
+    ssl_certificate /etc/nginx/ssl/spagliar.42.fr.crt;
+    ssl_certificate_key /etc/nginx/ssl/spagliar.42.fr.key;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
 
-    server 
+    root /var/www/wordpress;
+    index index.php;
+
+    # Gestion des fichiers PHP
+    location ~ \.php$ 
     {
-        listen 443 ssl;
-        server_name spagliar.42.fr;
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass wordpress:9000;  # Le conteneur PHP-FPM
+    }
 
-        ssl_certificate /etc/nginx/ssl/spagliar.42.fr.crt;
-        ssl_certificate_key /etc/nginx/ssl/spagliar.42.fr.key;
-
-        root /var/www/wordpress;
-        index index.php;
-
-        location / 
-        {
-            try_files $uri $uri/ =404;
-        }
-
-        location ~ \.php$ 
-        {
-            include snippets/fastcgi-php.conf;
-            fastcgi_pass wordpress:9000;
-        }
+    # Gestion des fichiers statiques et autres requêtes
+    location / 
+    {
+        try_files $uri $uri/ =404;
     }
 }
