--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,25 @@
 
-MYSQL_DATABASE=my_database
-MYSQL_USER=spagliar
-MYSQL_PASSWORD=spagliar
-MYSQL_ROOT_PASSWORD=spagliar
+USER=spagliar
+
+# MariaDB
+MDB_NAME=wordpress_db
+MDB_USER=spagliar
+MDB_PASS=STEPHpag
+MDB_HOST=mariadb:3306
+
+# WordPress
+WP_DIR=/var/www/html
+WP_URL=https://spagliar.42.fr
+WP_TITLE=Inception
+WP_ADMIN=spagliar
+WP_ADMIN_PASS=STEPHpag
+WP_ADMIN_EMAIL=spagliar@student.42.fr
+WP_USER=spagliar_user
+WP_USER_PASS=STEPHpag
+WP_USER_EMAIL=spagliar_user@student.42.fr
+
+
+# Nginx
+DOMAIN=spagliar.42.fr
+SSL_CERT_PATH=/etc/nginx/ssl/inception.crt
+SSL_KEY_PATH=/etc/nginx/ssl/inception.key 
