--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,30 +1,42 @@
-FROM debian:Bookworm
+FROM debian:bullseye
 
-EXPOSE	9000 #port utilise par PHP-FPM
+#installation des outils necessaires  et mise a jour des paquets
+RUN     apt-get update && apt-get upgrade -y
+RUN     apt-get install                 \
+                        wget            \
+                        php             \
+                        php-fpm         \
+                        php-cli         \
+                        php-mysql       \
+                        mariadb-client  \
+                        netcat          \
+                        -y
 
-#installation des logiciels necessaires
-RUN	apt update && apt install --no-install-recommends --no-install-suggests -y \
-	ca-certificates \ 
-    php7.4-fpm \ php7.4-mysql \
-	mariadb-client \
-	wget \ tar
+#creation de repertoire et ajuste les permissions pour stocker les fichiers wordpress
+RUN     mkdir -p /var/www/html
 
-RUN wget https://wordpress.org/wordpress-6.3.1.tar.gz -P /var/www
-RUN cd /var/www && tar -xzf wordpress-6.3.1.tar.gz && rm wordpress-6.3.1.tar.gz
+RUN     mkdir -p /run/php
+#attention on change utilisateur par defaut
+RUN     chown -R www-data:www-data /run/php
 
-COPY ./conf/wp-config.php /var/www/wordpress/
+#Telecharge et installe wordpress
+RUN     wget https://wordpress.org/latest.tar.gz -P /var/www/ && \
+        tar -xvf /var/www/latest.tar.gz -C /var/www/html --strip-components=1 && \
+        rm -rf /var/www/latest.tar.gz && \
+        chown -R www-data:www-data /var/www/html
 
-RUN chown -R root:root /var/www/wordpress
+#installe command line interface 
+RUN     wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+        chmod +x wp-cli.phar && \
+        mv wp-cli.phar /usr/local/bin/wp
 
-# Configure PHP to work with WordPress
-COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/
-RUN	mkdir -p /run/php
+#ecoute sur le port 9000
+# COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+COPY ./conf/www.conf /config/www.conf
+EXPOSE 9000
 
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x wp-cli.phar
-RUN mv wp-cli.phar /usr/local/bin/wp
+#copy over config script and give permissions
+COPY ./tools/wp-config.sh /wp-config.sh
+RUN   chmod +x /wp-config.sh
 
-COPY	./tools/entrypoint.sh /bin/
-RUN	chmod +x /bin/entrypoint.sh
-
-ENTRYPOINT	["sh", "/bin/entrypoint.sh"]
+ENTRYPOINT ["/wp-config.sh"]
