--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,25 +1,25 @@
-server 
-{
+server {
     listen 443 ssl;
-    server_name spagliar.42.fr;
+	listen [::]:443 ssl;
+    server_name         spagliar.42.fr;
+    ssl_certificate     /etc/nginx/ssl/inception.crt;
+    ssl_certificate_key /etc/nginx/ssl/inception.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    root                /var/www/html;
+    index               index.php;
 
-    ssl_certificate /etc/nginx/ssl/spagliar.42.fr.crt;
-    ssl_certificate_key /etc/nginx/ssl/spagliar.42.fr.key;
-    ssl_protocols TLSv1.2 TLSv1.3;
-
-    root /var/www/wordpress;
-    index index.php;
-
-    # Gestion des fichiers PHP
-    location ~ \.php$ 
-    {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass wordpress:9000;  # Le conteneur PHP-FPM
+    # Définit le bloc de config, traite et indique les requêtes pour les fichiers PHP
+    location / {
+        location ~ \.php$ {
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass wordpress:9000;  # Le nom du service WordPress
+            fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+            include fastcgi_params;
+        }
     }
 
-    # Gestion des fichiers statiques et autres requêtes
-    location / 
-    {
-        try_files $uri $uri/ =404;
-    }
+    # Applique les requêtes et essaie de servir le fichier demandé
+    # location / {
+    #     try_files $uri $uri/ =404;
+    # }
 }
