--- a/srcs/.env
+++ b/srcs/.env
@@ -5,7 +5,7 @@ USER=spagliar
 MDB_NAME=wordpress_db
 MDB_USER=spagliar
 MDB_PASS=STEPHpag
-MDB_HOST=mariadb:3306
+MDB_HOST=mariadb
 
 # WordPress
 WP_DIR=/var/www/html
