--- a/srcs/requirements/mariadb/conf/50.server.cnf
+++ b/srcs/requirements/mariadb/conf/50.server.cnf
@@ -1,6 +1,5 @@
-[mysqld]
+[mariadbd]
 datadir     = /var/lib/mysql
-socket      = /run/mysqld/mysqld.sock
 bind-address = 0.0.0.0
 port        = 3306
 user        = mysql
