--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl;
 	listen [::]:443 ssl;
-    server_name         spagliar.42.fr;
+    server_name         localhost spagliar.42.fr;
     ssl_certificate     /etc/nginx/ssl/inception.crt;
     ssl_certificate_key /etc/nginx/ssl/inception.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
@@ -9,17 +9,15 @@ server {
     index               index.php;
 
     # Définit le bloc de config, traite et indique les requêtes pour les fichiers PHP
-    location / {
-        location ~ \.php$ {
-            include snippets/fastcgi-php.conf;
-            fastcgi_pass wordpress:9000;  # Le nom du service WordPress
-            fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-            include fastcgi_params;
-        }
+    location ~ \.php$ {
+        include /etc/nginx/fastcgi_params;
+        fastcgi_pass wordpress:9000;  # Le nom du service WordPress
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     # Applique les requêtes et essaie de servir le fichier demandé
-    # location / {
-    #     try_files $uri $uri/ =404;
-    # }
+    location / {
+        try_files $uri $uri/ =404;
+    }
 }
