--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,13 +1,16 @@
-#utilisé pour configurer un processus PHP dédié à un site WordPress.
-
 [www]
-user = www-data
-group = www-data
-listen = 9000
-listen.owner = nobody
-listen.group = nobody
+; Adress and port where PHP-FPM listens for requests
+listen = wordpress:9000 
+; User under which the PHP-FPM service runs
+user = nobody 
+; Group under wich the PHP-FPM service runs
+group = nobody 
 pm = dynamic
+; Max number of child process to be alive at the same time
 pm.max_children = 5
+; Number of child processes created on startup
 pm.start_servers = 2
+;?? Min number of idle processes
 pm.min_spare_servers = 1
+;?? Max number of idle processes
 pm.max_spare_servers = 3 
